# home-manager

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .mailmap  .release  .travis.yml  3rd-party.html  404.html  CONTRIBUTING.adoc  CONTRIBUTING.md  FAQ.adoc  FAQ.md  Justfile  LICENSE  MAINTAINING.md  Makefile  README.md  all-maintainers.nix  buildbot-nix.toml  contributing.html  default.nix  faq.html  flake-module.nix  flake.nix  format  highlight.load.js  highlight.min.js  highlight.pack.js  index.html  index.xhtml  installation.html  integration-common.nix  internals.html  introduction.html  nix-darwin-options.html  nix-darwin-options.xhtml  nix-flakes.html  nixos-options.html  nixos-options.xhtml  (+25 more)
.builds/: manual.yml
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  stale.yml
ci/: parse.nix
contributing/: getting-started.html  guidelines.html  news.html  release-notes.html  tests.html
doc/: contributing.adoc  default.nix  faq.adoc  flakes.adoc  installation.adoc  installation.xml  man-configuration.xml  man-home-manager.xml  man-pages.xml  manual.xml  options-to-docbook.xsl  writing-modules.adoc
docs/: 3rd-party.adoc  contributing.adoc  default.nix  faq.adoc  flake.nix  highlight-style.css  home-manager.1  (+13 more)
docs/home-manager-render-docs/: pyproject.toml
docs/home-manager-render-docs/home_manager_render_docs/: __init__.py  options.py
tools/managed-config/: Cargo.toml  fallback.nix  package.nix
tools/managed-config/plugin-schemas/: local-test-plugin.json
tools/managed-config/src/: main.rs
(+6867 files in other folders)
