[project]
name = "home-manager-render-docs"
version = "0.0"
description = "Renderer for Home Manager manual and option docs"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "nixos-render-docs"
]

[project.scripts]
home-manager-render-docs = "home_manager_render_docs:main"

[build-system]
requires = ["setuptools"]
