[package]
name = "hermesix"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "hermesix"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
hex = "0.4"
miette = { version = "7", features = ["fancy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
